Update default configuration

--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.25.0.git
-# Tue Oct 20 13:10:58 2015
+# Sat Oct 31 17:16:24 2015
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_PLATFORM_POSIX is not set
@@ -100,7 +100,6 @@ CONFIG_PREFIX=""
 #
 # Busybox Library Tuning
 #
-# CONFIG_FEATURE_SYSTEMD is not set
 CONFIG_FEATURE_RTMINMAX=y
 CONFIG_PASSWORD_MINLEN=6
 CONFIG_MD5_SMALL=1
@@ -144,6 +143,7 @@ CONFIG_FEATURE_AR_LONG_FILENAMES=y
 CONFIG_FEATURE_AR_CREATE=y
 CONFIG_UNCOMPRESS=y
 CONFIG_GUNZIP=y
+CONFIG_FEATURE_GUNZIP_LONG_OPTIONS=y
 CONFIG_BUNZIP2=y
 CONFIG_UNLZMA=y
 CONFIG_FEATURE_LZMA_FAST=y
@@ -197,6 +197,9 @@ CONFIG_FEATURE_DD_STATUS=y
 CONFIG_ID=y
 CONFIG_GROUPS=y
 CONFIG_SHUF=y
+CONFIG_STAT=y
+CONFIG_FEATURE_STAT_FORMAT=y
+CONFIG_FEATURE_STAT_FILESYSTEM=y
 # CONFIG_SYNC is not set
 # CONFIG_FEATURE_SYNC_FANCY is not set
 CONFIG_TEST=y
@@ -244,8 +247,8 @@ CONFIG_FOLD=y
 # CONFIG_FSYNC is not set
 CONFIG_HEAD=y
 CONFIG_FEATURE_FANCY_HEAD=y
-CONFIG_INSTALL=y
-CONFIG_FEATURE_INSTALL_LONG_OPTIONS=y
+# CONFIG_INSTALL is not set
+# CONFIG_FEATURE_INSTALL_LONG_OPTIONS is not set
 CONFIG_LN=y
 CONFIG_LOGNAME=y
 CONFIG_LS=y
@@ -288,8 +291,6 @@ CONFIG_SORT=y
 CONFIG_FEATURE_SORT_BIG=y
 CONFIG_SPLIT=y
 CONFIG_FEATURE_SPLIT_FANCY=y
-CONFIG_STAT=y
-CONFIG_FEATURE_STAT_FORMAT=y
 # CONFIG_STTY is not set
 CONFIG_SUM=y
 CONFIG_TAC=y
@@ -569,6 +570,7 @@ CONFIG_DEFAULT_DEPMOD_FILE=""
 # CONFIG_FEATURE_MOUNT_FSTAB is not set
 # CONFIG_FEATURE_MOUNT_OTHERTAB is not set
 CONFIG_REV=y
+# CONFIG_SETARCH is not set
 # CONFIG_UEVENT is not set
 # CONFIG_ACPID is not set
 # CONFIG_FEATURE_ACPID_COMPAT is not set
@@ -622,7 +624,6 @@ CONFIG_HD=y
 # CONFIG_RTCWAKE is not set
 # CONFIG_SCRIPT is not set
 # CONFIG_SCRIPTREPLAY is not set
-# CONFIG_SETARCH is not set
 # CONFIG_SWAPONOFF is not set
 # CONFIG_FEATURE_SWAPON_DISCARD is not set
 # CONFIG_FEATURE_SWAPON_PRI is not set
@@ -725,7 +726,6 @@ CONFIG_FEATURE_DC_LIBM=y
 # CONFIG_IONICE is not set
 # CONFIG_INOTIFYD is not set
 # CONFIG_LAST is not set
-# CONFIG_FEATURE_LAST_SMALL is not set
 # CONFIG_FEATURE_LAST_FANCY is not set
 # CONFIG_HDPARM is not set
 # CONFIG_FEATURE_HDPARM_GET_IDENTITY is not set
@@ -768,7 +768,7 @@ CONFIG_NC_SERVER=y
 # CONFIG_FEATURE_FANCY_PING is not set
 CONFIG_WGET=y
 # CONFIG_FEATURE_WGET_STATUSBAR is not set
-CONFIG_FEATURE_WGET_AUTHENTICATION=y
+# CONFIG_FEATURE_WGET_AUTHENTICATION is not set
 CONFIG_FEATURE_WGET_LONG_OPTIONS=y
 # CONFIG_FEATURE_WGET_TIMEOUT is not set
 # CONFIG_FEATURE_WGET_OPENSSL is not set
