find: enable -perm option in default configuration

--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -416,7 +416,7 @@ CONFIG_FIND=y
 CONFIG_FEATURE_FIND_PRINT0=y
 CONFIG_FEATURE_FIND_MTIME=y
 CONFIG_FEATURE_FIND_MMIN=y
-# CONFIG_FEATURE_FIND_PERM is not set
+CONFIG_FEATURE_FIND_PERM=y
 CONFIG_FEATURE_FIND_TYPE=y
 # CONFIG_FEATURE_FIND_XDEV is not set
 CONFIG_FEATURE_FIND_MAXDEPTH=y
