mingw: update default configuration

--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.25.0.git
-# Sat Oct 31 17:16:24 2015
+# Mon Feb 22 10:28:56 2016
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_PLATFORM_POSIX is not set
@@ -79,6 +79,7 @@ CONFIG_EXTRA_LDLIBS=""
 #
 CONFIG_DEBUG=y
 # CONFIG_DEBUG_PESSIMIZE is not set
+# CONFIG_DEBUG_SANITIZE is not set
 # CONFIG_UNIT_TEST is not set
 # CONFIG_WERROR is not set
 CONFIG_NO_DEBUG_LIB=y
@@ -466,6 +467,7 @@ CONFIG_FEATURE_KILL_DELAY=0
 # CONFIG_FEATURE_INIT_COREDUMPS is not set
 # CONFIG_FEATURE_INITRD is not set
 CONFIG_INIT_TERMINAL_TYPE=""
+# CONFIG_FEATURE_INIT_MODIFY_CMDLINE is not set
 # CONFIG_MESG is not set
 # CONFIG_FEATURE_MESG_ENABLE_ONLY_GROUP is not set
 
@@ -550,6 +552,7 @@ CONFIG_DEFAULT_DEPMOD_FILE=""
 #
 # Linux System Utilities
 #
+# CONFIG_BLKDISCARD is not set
 # CONFIG_BLOCKDEV is not set
 # CONFIG_FATATTR is not set
 # CONFIG_FSTRIM is not set
@@ -634,6 +637,7 @@ CONFIG_HD=y
 # CONFIG_FEATURE_MOUNT_LOOP_CREATE is not set
 # CONFIG_FEATURE_MTAB_SUPPORT is not set
 # CONFIG_VOLUMEID is not set
+# CONFIG_FEATURE_VOLUMEID_BCACHE is not set
 # CONFIG_FEATURE_VOLUMEID_BTRFS is not set
 # CONFIG_FEATURE_VOLUMEID_CRAMFS is not set
 # CONFIG_FEATURE_VOLUMEID_EXFAT is not set
