mingw: add -fno-ident to CFLAGS
Without this flag a compiler version string is injected into each
binary object.  The linker doesn't deduplicate the strings, leading
to bloat.

This enhancement was suggested by Viktor Szakats.  It saves 13KB.

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -125,8 +125,7 @@ export SYSROOT=$(CONFIG_SYSROOT)
 endif
 
 ifeq ($(CONFIG_PLATFORM_MINGW32),y)
-# These defintions are not strictly needed, but they help shut up fnmatch.c warnings
-CFLAGS += -Iwin32 -DHAVE_STRING_H=1 -DHAVE_CONFIG_H=0 -fno-builtin-stpcpy
+CFLAGS += -Iwin32 -DHAVE_STRING_H=1 -DHAVE_CONFIG_H=0 -fno-builtin-stpcpy -fno-ident
 EXEEXT = .exe
 LDLIBS += userenv ws2_32
 endif
