mingw: remove bbconfig from default configuration
bbconfig isn't very useful.  Removing it saves over 5KB.

--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -697,8 +697,8 @@ CONFIG_FEATURE_LESS_LINENUMS=y
 # CONFIG_UBIUPDATEVOL is not set
 # CONFIG_WALL is not set
 # CONFIG_ADJTIMEX is not set
-CONFIG_BBCONFIG=y
-CONFIG_FEATURE_COMPRESS_BBCONFIG=y
+# CONFIG_BBCONFIG is not set
+# CONFIG_FEATURE_COMPRESS_BBCONFIG is not set
 # CONFIG_BEEP is not set
 CONFIG_FEATURE_BEEP_FREQ=0
 CONFIG_FEATURE_BEEP_LENGTH_MS=0
