mingw: enable busybox --install by default
Allow FEATURE_INSTALLER to be configured and enable it in the
default configuration.

The behaviour is slightly different from upstream BusyBox:

  symbolic links are not permitted;
  if no target directory is provided the directory containing
  the busybox binary is used as the target.

--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -25,7 +25,7 @@ CONFIG_FEATURE_BUFFERS_USE_MALLOC=y
 CONFIG_SHOW_USAGE=y
 CONFIG_FEATURE_VERBOSE_USAGE=y
 CONFIG_FEATURE_COMPRESS_USAGE=y
-# CONFIG_FEATURE_INSTALLER is not set
+CONFIG_FEATURE_INSTALLER=y
 # CONFIG_INSTALL_NO_USR is not set
 # CONFIG_LOCALE_SUPPORT is not set
 # CONFIG_UNICODE_SUPPORT is not set
