mingw: enable whois in default configuration

--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -784,7 +784,7 @@ CONFIG_FEATURE_WGET_LONG_OPTIONS=y
 # CONFIG_FEATURE_WGET_TIMEOUT is not set
 # CONFIG_FEATURE_WGET_OPENSSL is not set
 # CONFIG_FEATURE_WGET_SSL_HELPER is not set
-# CONFIG_WHOIS is not set
+CONFIG_WHOIS=y
 CONFIG_FEATURE_IPV6=y
 # CONFIG_FEATURE_UNIX_LOCAL is not set
 CONFIG_FEATURE_PREFER_IPV4_ADDRESS=y
