ash: make the noconsole option configurable at build time
The noconsole option depends on APIs that aren't available in
all incarnations of Microsoft Windows.  Allow it to be disabled
at build time.

--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -1036,6 +1036,7 @@ CONFIG_ASH_BUILTIN_PRINTF=y
 CONFIG_ASH_BUILTIN_TEST=y
 CONFIG_ASH_HELP=y
 CONFIG_ASH_CMDCMD=y
+CONFIG_ASH_NOCONSOLE=y
 # CONFIG_ASH_MAIL is not set
 # CONFIG_CTTYHACK is not set
 # CONFIG_HUSH is not set
