--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.27.0.git
-# Wed Feb  8 20:35:58 2017
+# Mon May 29 14:39:07 2017
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_PLATFORM_POSIX is not set
@@ -192,9 +192,8 @@ CONFIG_FEATURE_UNZIP_XZ=y
 # Coreutils
 #
 CONFIG_BASENAME=y
-CONFIG_CAL=y
 CONFIG_CAT=y
-CONFIG_CATV=y
+CONFIG_FEATURE_CATV=y
 # CONFIG_CHGRP is not set
 CONFIG_CHMOD=y
 # CONFIG_CHOWN is not set
@@ -231,6 +230,7 @@ CONFIG_UNEXPAND=y
 CONFIG_FEATURE_UNEXPAND_LONG_OPTIONS=y
 CONFIG_EXPR=y
 CONFIG_EXPR_MATH_SUPPORT_64=y
+CONFIG_FACTOR=y
 CONFIG_FALSE=y
 CONFIG_FOLD=y
 # CONFIG_FSYNC is not set
@@ -268,11 +268,15 @@ CONFIG_MKDIR=y
 CONFIG_FEATURE_MKDIR_LONG_OPTIONS=y
 # CONFIG_MKFIFO is not set
 # CONFIG_MKNOD is not set
+CONFIG_MKTEMP=y
 CONFIG_MV=y
 CONFIG_FEATURE_MV_LONG_OPTIONS=y
 # CONFIG_NICE is not set
+CONFIG_NL=y
 # CONFIG_NOHUP is not set
+# CONFIG_NPROC is not set
 CONFIG_OD=y
+CONFIG_PASTE=y
 CONFIG_PRINTENV=y
 CONFIG_PRINTF=y
 CONFIG_PWD=y
@@ -283,6 +287,7 @@ CONFIG_RM=y
 CONFIG_RMDIR=y
 CONFIG_FEATURE_RMDIR_LONG_OPTIONS=y
 CONFIG_SEQ=y
+# CONFIG_SHRED is not set
 CONFIG_SHUF=y
 CONFIG_SLEEP=y
 CONFIG_FEATURE_FANCY_SLEEP=y
@@ -307,6 +312,7 @@ CONFIG_TEST=y
 CONFIG_TEST1=y
 CONFIG_TEST2=y
 CONFIG_FEATURE_TEST_64=y
+# CONFIG_TIMEOUT is not set
 CONFIG_TOUCH=y
 # CONFIG_FEATURE_TOUCH_NODEREF is not set
 CONFIG_FEATURE_TOUCH_SUSV3=y
@@ -328,6 +334,7 @@ CONFIG_WC=y
 CONFIG_FEATURE_WC_LARGE=y
 CONFIG_WHOAMI=y
 # CONFIG_WHO is not set
+# CONFIG_W is not set
 # CONFIG_USERS is not set
 CONFIG_YES=y
 
@@ -375,7 +382,6 @@ CONFIG_DEFAULT_SETFONT_DIR=""
 #
 # Debian Utilities
 #
-CONFIG_MKTEMP=y
 # CONFIG_PIPE_PROGRESS is not set
 # CONFIG_RUN_PARTS is not set
 # CONFIG_FEATURE_RUN_PARTS_LONG_OPTIONS is not set
@@ -477,8 +483,6 @@ CONFIG_FEATURE_KILL_DELAY=0
 # CONFIG_FEATURE_INIT_COREDUMPS is not set
 CONFIG_INIT_TERMINAL_TYPE=""
 # CONFIG_FEATURE_INIT_MODIFY_CMDLINE is not set
-# CONFIG_MESG is not set
-# CONFIG_FEATURE_MESG_ENABLE_ONLY_GROUP is not set
 
 #
 # Login/Password Management Utilities
@@ -517,6 +521,7 @@ CONFIG_FEATURE_DEFAULT_PASSWD_ALGO=""
 # CONFIG_SU is not set
 # CONFIG_FEATURE_SU_SYSLOG is not set
 # CONFIG_FEATURE_SU_CHECKS_SHELLS is not set
+# CONFIG_FEATURE_SU_BLANK_PW_NEEDS_SECURE_TTY is not set
 # CONFIG_SULOGIN is not set
 # CONFIG_VLOCK is not set
 
@@ -568,8 +573,13 @@ CONFIG_DEFAULT_DEPMOD_FILE=""
 # CONFIG_BLKID is not set
 # CONFIG_FEATURE_BLKID_TYPE is not set
 # CONFIG_BLOCKDEV is not set
+CONFIG_CAL=y
+# CONFIG_CHRT is not set
 # CONFIG_DMESG is not set
 # CONFIG_FEATURE_DMESG_PRETTY is not set
+# CONFIG_EJECT is not set
+# CONFIG_FEATURE_EJECT_SCSI is not set
+# CONFIG_FALLOCATE is not set
 # CONFIG_FATATTR is not set
 # CONFIG_FBSET is not set
 # CONFIG_FEATURE_FBSET_FANCY is not set
@@ -589,6 +599,7 @@ CONFIG_DEFAULT_DEPMOD_FILE=""
 # CONFIG_FDFLUSH is not set
 # CONFIG_FREERAMDISK is not set
 # CONFIG_FSCK_MINIX is not set
+# CONFIG_FSFREEZE is not set
 # CONFIG_FSTRIM is not set
 CONFIG_GETOPT=y
 CONFIG_FEATURE_GETOPT_LONG=y
@@ -599,8 +610,11 @@ CONFIG_XXD=y
 # CONFIG_HWCLOCK is not set
 # CONFIG_FEATURE_HWCLOCK_LONG_OPTIONS is not set
 # CONFIG_FEATURE_HWCLOCK_ADJTIME_FHS is not set
+# CONFIG_IONICE is not set
 # CONFIG_IPCRM is not set
 # CONFIG_IPCS is not set
+# CONFIG_LAST is not set
+# CONFIG_FEATURE_LAST_FANCY is not set
 # CONFIG_LOSETUP is not set
 # CONFIG_LSPCI is not set
 # CONFIG_LSUSB is not set
@@ -610,6 +624,8 @@ CONFIG_XXD=y
 # CONFIG_FEATURE_MDEV_RENAME_REGEXP is not set
 # CONFIG_FEATURE_MDEV_EXEC is not set
 # CONFIG_FEATURE_MDEV_LOAD_FIRMWARE is not set
+# CONFIG_MESG is not set
+# CONFIG_FEATURE_MESG_ENABLE_ONLY_GROUP is not set
 # CONFIG_MKE2FS is not set
 # CONFIG_MKFS_EXT2 is not set
 # CONFIG_MKFS_MINIX is not set
@@ -630,12 +646,14 @@ CONFIG_XXD=y
 # CONFIG_FEATURE_MOUNT_FLAGS is not set
 # CONFIG_FEATURE_MOUNT_FSTAB is not set
 # CONFIG_FEATURE_MOUNT_OTHERTAB is not set
+# CONFIG_MOUNTPOINT is not set
 # CONFIG_NSENTER is not set
 # CONFIG_FEATURE_NSENTER_LONG_OPTS is not set
 # CONFIG_PIVOT_ROOT is not set
 # CONFIG_RDATE is not set
 # CONFIG_RDEV is not set
 # CONFIG_READPROFILE is not set
+# CONFIG_RENICE is not set
 CONFIG_REV=y
 # CONFIG_RTCWAKE is not set
 # CONFIG_SCRIPT is not set
@@ -643,15 +661,19 @@ CONFIG_REV=y
 # CONFIG_SETARCH is not set
 # CONFIG_LINUX32 is not set
 # CONFIG_LINUX64 is not set
+# CONFIG_SETSID is not set
 # CONFIG_SWAPON is not set
 # CONFIG_FEATURE_SWAPON_DISCARD is not set
 # CONFIG_FEATURE_SWAPON_PRI is not set
 # CONFIG_SWAPOFF is not set
 # CONFIG_SWITCH_ROOT is not set
+# CONFIG_TASKSET is not set
+# CONFIG_FEATURE_TASKSET_FANCY is not set
 # CONFIG_UEVENT is not set
 # CONFIG_UMOUNT is not set
 # CONFIG_FEATURE_UMOUNT_ALL is not set
 # CONFIG_UNSHARE is not set
+# CONFIG_WALL is not set
 # CONFIG_FEATURE_MOUNT_LOOP is not set
 # CONFIG_FEATURE_MOUNT_LOOP_CREATE is not set
 # CONFIG_FEATURE_MTAB_SUPPORT is not set
@@ -697,7 +719,6 @@ CONFIG_FEATURE_BEEP_LENGTH_MS=0
 # CONFIG_FEATURE_CHAT_SEND_ESCAPES is not set
 # CONFIG_FEATURE_CHAT_VAR_ABORT_LEN is not set
 # CONFIG_FEATURE_CHAT_CLR_ABORT is not set
-# CONFIG_CHRT is not set
 # CONFIG_CONSPY is not set
 # CONFIG_CROND is not set
 # CONFIG_FEATURE_CROND_D is not set
@@ -712,8 +733,6 @@ CONFIG_FEATURE_DC_LIBM=y
 # CONFIG_DEVFSD_VERBOSE is not set
 # CONFIG_FEATURE_DEVFS is not set
 # CONFIG_DEVMEM is not set
-# CONFIG_EJECT is not set
-# CONFIG_FEATURE_EJECT_SCSI is not set
 # CONFIG_FBSPLASH is not set
 # CONFIG_FLASHCP is not set
 # CONFIG_FLASH_ERASEALL is not set
@@ -731,9 +750,6 @@ CONFIG_FEATURE_DC_LIBM=y
 # CONFIG_I2CDUMP is not set
 # CONFIG_I2CDETECT is not set
 # CONFIG_INOTIFYD is not set
-# CONFIG_IONICE is not set
-# CONFIG_LAST is not set
-# CONFIG_FEATURE_LAST_FANCY is not set
 CONFIG_LESS=y
 CONFIG_FEATURE_LESS_MAXLINES=9999999
 CONFIG_FEATURE_LESS_BRACKETS=y
@@ -745,27 +761,24 @@ CONFIG_FEATURE_LESS_REGEXP=y
 # CONFIG_FEATURE_LESS_ASK_TERMINAL is not set
 CONFIG_FEATURE_LESS_DASHCMD=y
 CONFIG_FEATURE_LESS_LINENUMS=y
+# CONFIG_LSSCSI is not set
 # CONFIG_MAKEDEVS is not set
 # CONFIG_FEATURE_MAKEDEVS_LEAF is not set
 # CONFIG_FEATURE_MAKEDEVS_TABLE is not set
 CONFIG_MAN=y
 # CONFIG_MICROCOM is not set
-# CONFIG_MOUNTPOINT is not set
 # CONFIG_MT is not set
 # CONFIG_NANDWRITE is not set
 # CONFIG_NANDDUMP is not set
+# CONFIG_PARTPROBE is not set
 # CONFIG_RAIDAUTORUN is not set
 # CONFIG_READAHEAD is not set
 # CONFIG_RFKILL is not set
 # CONFIG_RUNLEVEL is not set
 # CONFIG_RX is not set
 # CONFIG_SETSERIAL is not set
-# CONFIG_SETSID is not set
 CONFIG_STRINGS=y
-# CONFIG_TASKSET is not set
-# CONFIG_FEATURE_TASKSET_FANCY is not set
 # CONFIG_TIME is not set
-# CONFIG_TIMEOUT is not set
 # CONFIG_TTYSIZE is not set
 # CONFIG_UBIRENAME is not set
 # CONFIG_UBIATTACH is not set
@@ -775,7 +788,6 @@ CONFIG_STRINGS=y
 # CONFIG_UBIRSVOL is not set
 # CONFIG_UBIUPDATEVOL is not set
 # CONFIG_VOLNAME is not set
-# CONFIG_WALL is not set
 # CONFIG_WATCHDOG is not set
 
 #
@@ -973,7 +985,6 @@ CONFIG_PS=y
 # CONFIG_FEATURE_PS_ADDITIONAL_COLUMNS is not set
 # CONFIG_PSTREE is not set
 # CONFIG_PWDX is not set
-# CONFIG_RENICE is not set
 # CONFIG_SMEMCAP is not set
 # CONFIG_BB_SYSCTL is not set
 # CONFIG_TOP is not set
