--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -11,7 +11,7 @@ CONFIG_PLATFORM_MINGW32=y
 # Busybox Settings
 #
 CONFIG_DESKTOP=y
-CONFIG_EXTRA_COMPAT=y
+# CONFIG_EXTRA_COMPAT is not set
 # CONFIG_INCLUDE_SUSv2 is not set
 CONFIG_USE_PORTABLE_CODE=y
 CONFIG_SHOW_USAGE=y
